...
        android:padding="5dp"
        android:textColor="@color/Black"
        android:text="Weather Update"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backBtn"
        android:backgroundTint="@color/Skyblue"
        android:src="@drawable/back_ios"/>


    <LinearLayout
        android:layout_width="match_parent"
...
                android:layout_marginTop="10dp"
                android:id="@+id/tvResult" />
        </ScrollView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etCity"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:background="@drawable/shape_edittext01"
            android:textColor="@color/Black"
            android:drawableStart="@drawable/ic_location"
...
            android:layout_marginRight="25dp"
            android:textColorHint="@color/Black"
            android:inputType="textPersonName" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnGet"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_button01"
            android:textColor="@android:color/white"
            android:onClick="getWeatherDetails"
            android:layout_margin="25dp"
            android:text="Get"
            app:backgroundTint="@null" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6">
...
