...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:hintEnabled="false">

                <EditText
...
                    android:textColor="@color/Black"
                    android:textColorHint="@color/gray01"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTil"
                android:layout_marginTop="5dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">
...
                android:text="forgot password?"
                android:textColor="@color/gray02" />


            <!--login Btn-->
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgotTv"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button01"
                android:text="Login"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>

    <TextView
...
