...
        android:layout_marginTop="75dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/weather_app" />


    <EditText
        android:id="@+id/Notes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/imageBtn"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="18dp"
...
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp"
        android:textColor="@color/Black"
        android:textColorHint="@color/gray01" />

    <Button
        android:id="@+id/SaveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Notes"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shape_button01"
        android:text="Save Note"
        android:textColor="@color/white" />


    <LinearLayout
        android:id="@+id/DispAccdetailsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/SaveBtn"
        android:layout_marginTop="25dp"
        android:textAlignment="center">
...
